--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -18,11 +18,24 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@/src/*": ["src/*"],
-      "@/modules/*": ["src/modules/*"],
-      "@/auth/*": ["src/modules/auth/*"],
-      "@/product/*": ["src/modules/product/*"],
-      "@/customer/*": ["src/modules/customer/*"],
+      "@/src/*": [
+        "src/*"
+      ],
+      "@/modules/*": [
+        "src/modules/*"
+      ],
+      "@/auth/*": [
+        "src/modules/auth/*"
+      ],
+      "@/product/*": [
+        "src/modules/product/*"
+      ],
+      "@/customer/*": [
+        "src/modules/customer/*"
+      ],
+      "@/transaction/*": [
+        "src/modules/transaction/*"
+      ]
     }
   }
 }
