--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
     "react": "^18.2.0",
+    "react-credit-cards-2": "^1.0.3",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router": "^7.1.1",
